--- a/P(k)PlotSimulation_N-body.ipynb
+++ b/P(k)PlotSimulation_N-body.ipynb
@@ -207,7 +207,7 @@
     "\n",
     "#To save as MP4 (ffmpeg required):\n",
     "writer = FFMpegWriter(fps=interp_steps*5, bitrate=2000)\n",
-    "anim.save('pkfinaltry.mp4', writer=writer)\n",
+    "anim.save('PkSimulation.mp4', writer=writer)\n",
     "\n",
     "plt.show()\n",
     "\n",
